--- a/src/App.css
+++ b/src/App.css
@@ -27,7 +27,13 @@
 .App-link {
   color: #61dafb;
 }
-
+.text{
+  text-align: center;
+  align-items: center;
+}
+.panel{
+  margin-top: 10px;
+}
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
